@@ -25,7 +25,7 @@ val run_command: string -> unit
 val compile_file:
   ?output:string -> ?opt:string -> ?stable_name:string -> string -> int
 val create_archive: string -> string list -> int
-val quote_files: string list -> string
+val quote_files: response_files:bool -> string list -> string
 val quote_optfile: string option -> string
 (*val make_link_options: string list -> string*)
 
