@@ -108,3 +108,5 @@ let target = {@QS@|@target@|@QS@}
 let systhread_supported = @systhread_support@
 
 let flexdll_dirs = [@flexdll_dir@]
+
+let ar_supports_response_files = @ar_supports_response_files@
